center alignment safari fix

--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -15,6 +15,11 @@ strong {
   font-weight: normal;
 }
 
+.MuiGrid-align-content-xs-center {
+  display: -webkit-inline-box !important;
+ -webkit-box-align: center !important;
+}
+
 .MuiGrid-align-content-xs-center.MuiGrid-justify-xs-center {
   display: -webkit-inline-box !important;
  -webkit-box-align: center !important;
